--- a/vagrant/working/restaurants/templates/menu.html
+++ b/vagrant/working/restaurants/templates/menu.html
@@ -1,8 +1,20 @@
 <html>
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
 	<body>
 		<h1>{{ restaurant.name }}</h1>
 
 	</br>
+
+		{% with messages = get_flashed_messages() %}
+			{% if messages %}
+
+			<ul>
+				{% for message in messages %}
+					<li> <strong> {{ message }} </strong> </li></br>
+				{% endfor %}
+			</ul>
+			{% endif %}
+		{% endwith %}
 
 	<a href='{{url_for('newMenuItem', restaurant_select = restaurant.id)}}'>New Item</a>
 
