--- a/vagrant/working/restaurants/templates/deleteRestaurant.html
+++ b/vagrant/working/restaurants/templates/deleteRestaurant.html
@@ -1,6 +1,6 @@
 <html>
 	<body>
-		<h1>Are you sure you want to delete {{item.name}} from the menu for {{restaurant.name}}?</h1>
+		<h1>Are you sure you want to delete {{restaurant.name}}?</h1>
 
 		<form action="#" method = 'post'>
 
