--- a/vagrant/working/restaurants/templates/editRestaurant.html
+++ b/vagrant/working/restaurants/templates/editRestaurant.html
@@ -1,11 +1,11 @@
 <html>
 	<body>
-		<h1>Edit {{item.name}} on the menu for {{restaurant.name}}</h1>
+		<h1>Edit {{restaurant.name}}</h1>
 
 		<form action="#" method = 'post'>
 
 			<p>Name:</p>
-				<input type='text' size='30' name='name' placeholder='{{item.name}}'>
+				<input type='text' size='30' name='name' placeholder='{{restaurant.name}}'>
 
 		<input type='submit' value='Update'>
 
