--- a/vagrant/working/restaurants/templates/menu.html
+++ b/vagrant/working/restaurants/templates/menu.html
@@ -1,49 +1,24 @@
 <html>
-	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
 	<body>
 		<h1>{{ restaurant.name }}</h1>
 
-	</br>
+		{% if items %}
 
-		{% with messages = get_flashed_messages() %}
-			{% if messages %}
+			{% for item in items %}
 
-			<ul>
-				{% for message in messages %}
-					<li> <strong> {{ message }} </strong> </li></br>
-				{% endfor %}
-			</ul>
-			{% endif %}
-		{% endwith %}
+			{{ item.name }}
 
-	<a href='{{url_for('newMenuItem', restaurant_select = restaurant.id)}}'>New Item</a>
+			</br>
+			<a href = '#'>Edit</a>
+			</br>
+			<a href = '#'>Delete</a>
+			</br></br></br>
 
-	</br>
-	</br>
+			{% endfor %}
 
-		{% for i in items %}
-
-		{{i.name}}
-	</br>
-
-		{{i.description}}
-	</br>
-
-		{{i.price}}
-
-	</br>
-
-	<a href='{{url_for('editMenuItem', restaurant_select = restaurant.id, menu_select = i.id)}}'>Edit</a>
-
-	</br>
-
-	<a href='{{url_for('deleteMenuItem', restaurant_select = restaurant.id, menu_select = i.id)}}'>Delete</a>
-
-	</br>
-	</br>
-
-		{% endfor %}
+		{% else %}
+			There are currently no items on the menu.
+		{% endif %}
 
 	</body>
-
 </html>
