--- a/vagrant/working/restaurants/templates/deletemenuitem.html
+++ b/vagrant/working/restaurants/templates/deletemenuitem.html
@@ -1,19 +1,24 @@
 <html>
 	<body>
-		<h1>Are you sure you want to delete {{item.name}} from the menu for {{restaurant.name}}?</h1>
 
-		<form action="#" method = 'post'>
+		{% if item %}
 
-		<input type='submit' value='Delete'>
+			<h1>Are you sure you want to delete {{item.name}} from the menu for {{restaurant.name}}?</h1>
 
-		</br>
-		</br>
+			<form action="#" method = 'post'>
 
-		<a href = '#'>Cancel</a>
+			<input type='submit' value='Delete'>
 
-		</form>
+			</br>
+			</br>
 
-		
+			<a href = '#'>Cancel</a>
+
+			</form>
+
+		{% else %}
+			<h1>Item not found on menu for {{restaurant.name}}</h1>
+		{% endif %}
 
 	</body>
 </html>
