--- a/vagrant/working/restaurants/templates/editmenuitem.html
+++ b/vagrant/working/restaurants/templates/editmenuitem.html
@@ -1,22 +1,27 @@
 <html>
 	<body>
-		<h1>Edit {{item.name}} on the menu for {{restaurant.name}}</h1>
 
-		<form action="#" method = 'post'>
+		{% if item %}
 
-			<p>Name:</p>
-				<input type='text' size='30' name='name' placeholder='{{item.name}}'>
+			<h1>Edit {{item.name}} on the menu for {{restaurant.name}}</h1>
 
-		<input type='submit' value='Update'>
+			<form action="#" method = 'post'>
 
-		</br>
-		</br>
+				<p>Name:</p>
+					<input type='text' size='30' name='name' placeholder='{{item.name}}'>
 
-		<a href = '#'>Cancel</a>
+			<input type='submit' value='Update'>
 
-		</form>
+			</br>
+			</br>
 
-		
+			<a href = '#'>Cancel</a>
+
+			</form>
+
+		{% else %}
+			<h1>Item not found on menu for {{restaurant.name}}</h1>
+		{% endif %}
 
 	</body>
 </html>
