Added url_for statements to create links.

--- a/vagrant/working/restaurants/templates/editmenuitem.html
+++ b/vagrant/working/restaurants/templates/editmenuitem.html
@@ -15,7 +15,7 @@
 			</br>
 			</br>
 
-			<a href = '#'>Cancel</a>
+			<a href = '{{url_for('showMenu', restaurant_select = restaurant.id)}}'>Cancel</a>
 
 			</form>
 
