--- a/vagrant/working/restaurants/templates/deletemenuitem.html
+++ b/vagrant/working/restaurants/templates/deletemenuitem.html
@@ -12,7 +12,7 @@
 			</br>
 			</br>
 
-			<a href = '#'>Cancel</a>
+			<a href = '{{url_for('showMenu', restaurant_select = restaurant.id)}}'>Cancel</a>
 
 			</form>
 
