--- a/vagrant/working/restaurants/templates/deleteRestaurant.html
+++ b/vagrant/working/restaurants/templates/deleteRestaurant.html
@@ -2,7 +2,7 @@
 	<body>
 		<h1>Are you sure you want to delete {{restaurant.name}}?</h1>
 
-		<form action="#" method = 'post'>
+		<form action="{{url_for('deleteRestaurant', restaurant_select = restaurant.id)}}" method = 'post'>
 
 		<input type='submit' value='Delete'>
 
