--- a/vagrant/working/restaurants/templates/editRestaurant.html
+++ b/vagrant/working/restaurants/templates/editRestaurant.html
@@ -2,7 +2,7 @@
 	<body>
 		<h1>Edit {{restaurant.name}}</h1>
 
-		<form action="#" method = 'post'>
+		<form action="{{url_for('editRestaurant', restaurant_select = restaurant.id)}}" method = 'post'>
 
 			<p>Name:</p>
 				<input type='text' size='30' name='name' placeholder='{{restaurant.name}}'>
