--- a/vagrant/working/restaurants/templates/editmenuitem.html
+++ b/vagrant/working/restaurants/templates/editmenuitem.html
@@ -5,10 +5,23 @@
 
 			<h1>Edit {{item.name}} on the menu for {{restaurant.name}}</h1>
 
-			<form action="#" method = 'post'>
+			<form action="{{url_for('editMenuItem', restaurant_select = restaurant.id, menu_select = item.id)}}" method = 'post'>
 
 				<p>Name:</p>
 					<input type='text' size='30' name='name' placeholder='{{item.name}}'>
+
+				<p>Description:</p>
+					<input type='text' size='30' name='description' placeholder='{{item.description}}'>
+
+				<p>Price:</p>
+					<input type='text' size='30' name='price' placeholder='{{item.price}}'>
+
+				<p>Course:</p>
+					<input type='radio' size='30' name='course' value='Appetizer'> Appetizer </br>
+					<input type='radio' size='30' name='course' value='Entree'> Entree </br>
+					<input type='radio' size='30' name='course' value='Dessert'> Dessert </br>
+					<input type='radio' size='30' name='course' value='Side'> Side </br>
+				<p>Current course: {{item.course}}</p>
 
 			<input type='submit' value='Update'>
 
