--- a/vagrant/working/restaurants/templates/newmenuitem.html
+++ b/vagrant/working/restaurants/templates/newmenuitem.html
@@ -2,7 +2,7 @@
 	<body>
 		<h1>Add a New Menu Item to {{restaurant.name}}</h1>
 
-		<form action="#" method = 'post'>
+		<form action="{{url_for('newMenuItem', restaurant_select = restaurant.id)}}" method = 'post'>
 
 			<p>Name:</p>
 				<input type='text' size='30' name='name'>
