Added links to go between individual restaurants and the list of restaurants.

--- a/vagrant/working/restaurants/templates/restaurants.html
+++ b/vagrant/working/restaurants/templates/restaurants.html
@@ -9,6 +9,7 @@
 			{% for restaurant in restaurants %}
 
 			{{ restaurant.name }}
+			<a href = '{{url_for('showMenu', restaurant_select = restaurant.id)}}'>Menu</a>
 			</br>
 			<a href = '{{url_for('editRestaurant', restaurant_select = restaurant.id)}}'>Edit</a>
 			</br>
