--- a/vagrant/working/restaurants/templates/menu.html
+++ b/vagrant/working/restaurants/templates/menu.html
@@ -2,6 +2,9 @@
 	<body>
 		<h1>{{ restaurant.name }}</h1>
 
+		<a href = '{{url_for('showRestaurants')}}'>Restaurant List</a>
+		</br></br>
+
 		{% if items %}
 
 			{% for item in items %}
